fix bleeds in unit opener

--- a/styles/design-settings/cosmos/parts/_unitopener-settings.scss
+++ b/styles/design-settings/cosmos/parts/_unitopener-settings.scss
@@ -18,5 +18,8 @@
         font-family: (_ref: 'typography:::titleOption1Font'),
         background-color: (_ref: 'colorMap:::unitLightBoxBgColor'),
     ),
+    UnitPageBg: (
+        background-color: #8B1504,
+    ),
   )
 ));
