--- a/styles/designs/cosmos/pdf/_folio.scss
+++ b/styles/designs/cosmos/pdf/_folio.scss
@@ -60,6 +60,11 @@
   .os-eoc {
     page: eoc;
   }
+
+  div[data-type="unit"] {
+    page: unit;
+    prince-page-group: start;
+  }
   
   [data-type="chapter"] {
     page: chapter;
@@ -75,6 +80,27 @@
   }
   
   //Unnumbered Pages
+
+  @page unit {
+    @top-left-corner {
+    content: none;
+    }
+    @top-right-corner {
+    content: none;
+    }
+    @top-left {
+    content: none;
+    }
+    @top-center {
+    content: none;
+    }
+    @top-right {
+    content: none;
+    }
+    @bottom-left {
+      content: none;
+    }
+  }
 
   @page chapter:nth(1) {
     @top-left-corner {
