--- a/styles/output/history-pdf.css
+++ b/styles/output/history-pdf.css
@@ -531,6 +531,10 @@ div[data-type="page"].preface {
 .os-eoc {
   page: eoc; }
 
+div[data-type="unit"] {
+  page: unit;
+  prince-page-group: start; }
+
 [data-type="chapter"] {
   page: chapter;
   prince-page-group: start; }
@@ -540,6 +544,20 @@ div[data-type="page"].appendix {
 
 div[data-type="composite-page"].os-eob {
   page: eob; }
+
+@page unit {
+  @top-left-corner {
+    content: none; }
+  @top-right-corner {
+    content: none; }
+  @top-left {
+    content: none; }
+  @top-center {
+    content: none; }
+  @top-right {
+    content: none; }
+  @bottom-left {
+    content: none; } }
 
 @page chapter:nth(1) {
   @top-left-corner {
